# aws-vpn

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
ansible/: ansible.cfg
ansible/inventory/: hosts.ini.example
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: bootstrap.yml  wireguard.yml
ansible/roles/common/defaults/: main.yml
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/wireguard/defaults/: main.yml
ansible/roles/wireguard/handlers/: main.yml
ansible/roles/wireguard/tasks/: main.yml
ansible/roles/wireguard/templates/: wg0.conf.j2
scripts/: gen-inventory.sh
terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/vpn-instance/: main.tf  outputs.tf  variables.tf
