# pyproject.toml
#
# This file configures the Python toolchain for the project.
# The `tools/` package is defined here and installed with `uv pip install -e tools/`.
# Tool configuration (ruff, mypy, pytest) lives here so all tools read from one file.
#
# The [project] section and [project.scripts] entrypoint are added in PR 7 when
# the Python source package is introduced.

[tool.ruff]
# ruff replaces flake8, isort, and black in one tool.
# Target Python 3.12+ — the minimum version for this project.
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "ANN", # flake8-annotations (type hints)
  "S",   # flake8-bandit (security)
]
ignore = [
  "ANN101", # missing type annotation for `self`
  "ANN102", # missing type annotation for `cls`
]

[tool.ruff.lint.per-file-ignores]
# Test files: relax security and annotation rules
"tools/tests/*" = ["S", "ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
# Errors on missing stubs for third-party packages
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tools/tests"]
# Verbose by default so test names are always visible
addopts = "-v"
