[project]
name = "aws-vpn"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "ANN", # flake8-annotations (type hints)
  "S",   # flake8-bandit (security)
]
ignore = [
  "ANN101", # missing type annotation for `self`
  "ANN102", # missing type annotation for `cls`
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false

[dependency-groups]
dev = [
    "ansible>=13.5.0",
    "ansible-lint>=26.4.0",
    "pre-commit>=4.5.1",
]
